--- a/templates/areas.hbs
+++ b/templates/areas.hbs
@@ -1,6 +1,7 @@
 <div id="fu-table-area" class="fu-area">
   <div id="fu-table-cards" class="fu-hud-cards"></div>
   <div class="fu-hud-controls">
+    {{!-- Show clean table button to GM or to players with hand cards --}}
     {{#if isGM}}
       <button id="fu-clean-table" class="fu-button"><i class="fa-solid fa-broom-wide" title="Clean Table"></i></button>
     {{else}}
