feat: Update card deck logs, manifest, and enhance MP spending functionality in chat messages

--- a/templates/set-activation.hbs
+++ b/templates/set-activation.hbs
@@ -34,7 +34,7 @@
   </div>
   
   <div class="fu-tags flexrow gap-5">
-    <a data-action="applyResourceLoss" data-resource="mp" data-amount="{{mpCost}}" data-tooltip="Click to spend MP">
+    <a data-action="applyResourceLoss" data-resource="mp" data-amount="{{mpCost}}" data-actor="{{actorId}}" data-tooltip="Click to spend MP">
       <span class="fu-tag button flex-group-center gap-5" style="width:100%;white-space:nowrap">Spend {{mpCost}} <i class="icon fas fa-hat-wizard"></i></span>
     </a>
   </div>
