--- a/templates/areas.hbs
+++ b/templates/areas.hbs
@@ -21,10 +21,10 @@
       {{!-- Set info bar --}}
       <div class="fu-set-info-bar" id="fu-hand-info-bar"></div>
       <div id="fu-hand-cards" class="fu-hud-cards"></div>
-      <div class="fu-hud-controls">
-        <button id="fu-draw-card" class="fu-button"><i class="fa-solid fa-cards-blank" title="Draw Card"></i></button>
-        <button id="fu-reset-hand" class="fu-button"><i class="fa-solid fa-broom-wide" title="Reset Hand"></i></button>
-      </div>
+        <div class="fu-hud-controls">
+          <button id="fu-draw-card" class="fu-button"><i class="fa-solid fa-cards-blank" title="Draw Card"></i></button>
+          <button id="fu-discard-selected" class="fu-button" disabled><i class="fa-solid fa-trash" title="Discard Selected Card"></i></button>
+        </div>
     </div>
   {{/if}}
 {{/unless}}
