--- a/templates/set-activation.hbs
+++ b/templates/set-activation.hbs
@@ -1,16 +1,28 @@
 <div>
   <header class="title-desc chat-header flexrow">
+    <a data-link="" draggable="true" data-uuid="Actor.YMKqyPRdD9FS9PIV.Item.lYC4cepfhWlG3g1t" data-type="Item" data-tooltip="Magic Cards">
+      <img src="systems/projectfu/styles/static/compendium/classes/ace-card/magic_cards.png" alt="Magic Cards" data-item-id="lYC4cepfhWlG3g1t" class="item-img">
+    </a>
     <h2 style="flex-grow:8">{{setName}}</h2>
   </header>
   
-  <div class="fu-tags">
-    <div class="fu-tag">
-      {{playerName}}
-    </div>
-    <div class="fu-tag">
-      {{mpCost}} MP
-    </div>
+<div class="fu-tags">
+  <div class="fu-tag">
+    Magic Cards
   </div>
+  {{#if isMultiTarget}}
+    <div class="fu-tag">
+      Multiple
+    </div>
+  {{else}}
+    <div class="fu-tag">
+      Single
+    </div>
+  {{/if}}
+  <div class="fu-tag">
+    {{mpCost}} MP
+  </div>
+</div>
   
   <div class="chat-desc">
     <details open>
