--- a/templates/healing-allocation.hbs
+++ b/templates/healing-allocation.hbs
@@ -33,7 +33,7 @@
             </thead>
             <tbody>
                 {{#each targets}}
-                <tr data-actor-id="{{id}}">
+                <tr data-actor-id="{{id}}" data-token-id="{{tokenId}}">
                     <td class="character-cell">
                         <img src="{{img}}" width="24" height="24" style="margin-right: 5px;"/>
                         <span>{{name}}</span>
