--- a/templates/areas.hbs
+++ b/templates/areas.hbs
@@ -7,6 +7,7 @@
     {{else}}
       {{#if hasHandCards}}
         <button id="fu-clean-table" class="fu-button"><i class="fa-solid fa-broom-wide" title="Clean Table"></i></button>
+        <button id="fu-manual-reset" class="fu-button" title="Manual Reset (Use only if cards get stuck)"><i class="fas fa-exclamation-triangle"></i></button>
       {{/if}}
     {{/if}}
   </div>
