--- a/templates/set-activation.hbs
+++ b/templates/set-activation.hbs
@@ -127,7 +127,7 @@
       <a>
         <label class="damageType physical grid grid-3col">
           <div class="startcap"></div>
-          <div id="weapon-damage-text">Damage</div>
+          <div id="weapon-damage-text" style="white-space: nowrap; min-width: 80px; text-align: center;">Damage?</div>
           <div class="endcap" data-tooltip="Select a card to set damage type">
             <i class="fua fu-physical"></i>
           </div>
