feat: Improve card handling and UI event management for better gameplay experience

--- a/templates/areas.hbs
+++ b/templates/areas.hbs
@@ -22,7 +22,7 @@
       <div id="fu-hand-cards" class="fu-hud-cards"></div>
       <div class="fu-hud-controls">
         <button id="fu-draw-card" class="fu-button"><i class="fa-solid fa-cards-blank" title="Draw Card"></i></button>
-        <button id="fu-mulligan" class="fu-button" title="Mulligan: Discard up to your skill level in cards and draw that many"><i class="fas fa-arrows-rotate"></i></button>
+        <button id="fu-mulligan" class="fu-button" title="Mulligan: Discard up to your skill level in cards and draw that many"><i class="fa-solid fa-arrows-retweet"></i></button>
       </div>
     </div>
   {{/if}}
