--- a/templates/areas.hbs
+++ b/templates/areas.hbs
@@ -1,4 +1,9 @@
 <div id="fu-table-area" class="fu-area">
+  <!-- Info panel ABOVE cards, not overlapping -->
+  <div class="fu-set-info-panel" id="fu-table-info-panel">
+    <div class="fu-set-info-bar" id="fu-table-info-bar"></div>
+  </div>
+  
   <div id="fu-table-cards" class="fu-hud-cards"></div>
   <div class="fu-hud-controls">
     {{#if isGM}}
@@ -9,21 +14,14 @@
       {{/if}}
     {{/if}}
   </div>
-  
-  {{!-- Separated info bar panel --}}
-  <div class="fu-set-info-panel" id="fu-table-info-panel">
-    <div class="fu-set-info-bar" id="fu-table-info-bar"></div>
-  </div>
 </div>
 
-{{!-- Only show hand area to non-GM players who have a hand --}}
 {{#unless isGM}}
   {{#if hasHandCards}}
     <div id="fu-hand-area" class="fu-area">
-      {{!-- Add a clickable drawer handle --}}
       <div class="fu-drawer-handle" title="Click to keep open/close"></div>
       
-      {{!-- Separated info bar panel --}}
+      <!-- Info panel ABOVE cards, not overlapping -->
       <div class="fu-set-info-panel" id="fu-hand-info-panel">
         <div class="fu-set-info-bar" id="fu-hand-info-bar"></div>
       </div>
