--- a/templates/areas.hbs
+++ b/templates/areas.hbs
@@ -4,7 +4,7 @@
     <div class="fu-set-info-bar" id="fu-table-info-bar"></div>
   </div>
   
-  <div id="fu-table-cards" class="fu-hud-cards"></div>
+  <div id="fu-table-cards" class="fu-table-cards"></div>
   <div class="fu-hud-controls">
     {{#if isGM}}
       <button id="fu-manual-reset" class="fu-button" title="Clean Table (Removes all cards from table)"><i class="fas fa-broom"></i></button>
@@ -26,7 +26,7 @@
         <div class="fu-set-info-bar" id="fu-hand-info-bar"></div>
       </div>
       
-      <div id="fu-hand-cards" class="fu-hud-cards"></div>
+      <div id="fu-hand-cards" class="fu-hand-cards"></div>
       <div class="fu-hud-controls">
         <button id="fu-draw-card" class="fu-button"><i class="fa-solid fa-cards-blank" title="Draw Card"></i></button>
         <button id="fu-mulligan" class="fu-button" title="Mulligan: Discard up to your skill level in cards and draw that many"><i class="fa-solid fa-arrows-retweet"></i></button>
