--- a/templates/areas.hbs
+++ b/templates/areas.hbs
@@ -34,3 +34,8 @@
     </div>
   {{/if}}
 {{/unless}}
+
+<div id="fu-table-toggle" class="fu-toggle-button" title="Toggle Table Visibility">
+  <i class="fas fa-eye"></i>
+  <span class="fu-card-count" style="display:none">0</span>
+</div>
