--- a/templates/areas.hbs
+++ b/templates/areas.hbs
@@ -30,6 +30,8 @@
       <div class="fu-hud-controls">
         <button id="fu-draw-card" class="fu-button"><i class="fa-solid fa-cards-blank" title="Draw Card"></i></button>
         <button id="fu-mulligan" class="fu-button" title="Mulligan: Discard up to your skill level in cards and draw that many"><i class="fa-solid fa-arrows-retweet"></i></button>
+        <button id="fu-shuffle-deck" class="fu-button" title="Shuffle Deck: Reset and shuffle all your cards"><i class="fa-solid fa-shuffle"></i></button>
+
       </div>
     </div>
   {{/if}}
