fir air icon for set-activation template

--- a/templates/set-activation.hbs
+++ b/templates/set-activation.hbs
@@ -70,7 +70,7 @@
           <div class="startcap"></div>
           <div>{{damageValue}}</div>
           <div class="endcap" data-tooltip="{{damageTypeLabel}}">
-            <i class="fua fu-{{damageType}}"></i>
+            <i class="fua fu-{{damageTypeIcon}}"></i>
           </div>
         </label>
       </a>
